tests/golden/type_errors/function_value_wrong_arity.cd
fun add(a, b) {
  return a + b;
}
let f = add;
print f(1);
